<resources>
    <string name="app_name">Training Project</string>
    <string name="note_shared_preferences">noteSharedPreferences</string>

    <!--persistent storage-->
    <string name="note_title">Title</string>
    <string name="note_content">Content</string>
    <string name="save_note">Save</string>
    <string name="empty_note_title_error">Note title is required.</string>
    <string name="empty_note_content_error">Note content is required.</string>
    <string name="external_storage_access_error">Could not access the external storage.\nHave you included the WRITE_EXTERNAL_STORAGE permission in the manifest?</string>
    <string name="title_activity_settings">Settings</string>

    <!--fragment-->
    <string name="rotate_screen_message">Rotate device to see the expanded screen.</string>
    <string name="tap_send_data_message">Tap this button to send data to the parent activity.</string>
    <string name="send_using_interface">Send data using interface</string>
    <string name="send_using_get_activity">Send data using getActivity</string>
    <string name="send_using_local_broadcast_receiver">Send data using local broadcast receiver</string>
    <string name="obtain_index_failed">Obtained index value failed</string>
    <string name="send_data_to_activity_intent_name">send_data_to_activity_intent_name</string>
    <string name="send_data_to_activity_message">Tap the button in any fragment screen to send the fragment index to this activity.\nThis demonstrates the process of sending data from fragment to activity.</string>
    <string name="send_data_to_fragment_message">Sending data from activity to fragment is demonstrated in the update of selection state after pressing back button in ListFragment.</string>

    <!--communicate between activities-->
    <string name="integer_type">Integer</string>
    <string name="double_type">Double</string>
    <string name="string_type">String</string>
    <string name="boolean_type">Boolean</string>
    <string name="array_list_type">ArrayList</string>
    <string name="hash_map_type">HashMap</string>
    <string name="not_included_type">This type was not included in bundle.</string>
    <string name="data">data</string>
    <string name="choose_send_option">Choose a method to send data to another activity.\nThe data includes an integer, a boolean, a double, a string, an array list and a hash map.</string>

    <!--services-->
    <string name="my_intent_service">MyIntentService</string>
    <string name="result_receiver">Result Receiver</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="event_bus">Event bus</string>
    <string name="rx_java">RxJava</string>
    <string name="intent_service_explanation">This is an IntentService demo.\nChoose a communication option and the current integer will be sent to the corresponding service using that method. Right after that, the service will increment that value and send it back to this activity. Finally, the result will be updated on screen.</string>
    <string name="start_alarm">Start alarm</string>
    <string name="end_alarm">End alarm</string>
    <string name="extending_binder_service_explanation">This demonstrates the bound service using the extended Binder class.\nWhen the button is tapped, the current integer will be sent to the service via binding method.\nRight after that, the service will increment that value and send it back to this activity using Local Broadcast Manager. Finally, the result will be updated on screen.</string>
    <string name="increment_by_one">Increment by 1</string>
    <string name="custom_service_explanation">This is a custom service with a scheduled alarm.\nWhen the button StartAlarm is tapped, the alarm is fired and the below number will be automatically incremented after a certain time.</string>
    <string name="using_execute_on_executor">Using ExecuteOnExecutor?</string>
    <string name="start_download">Start Download</string>
    <string name="number_of_images">Number of images</string>
    <string name="number_of_images_empty_error">Number of images is required.</string>
    <string name="display_images">Display images?</string>

    <!--image-->
    <string name="image_size">Image size</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="orientation">Orientation</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="choose_scale_type">Choose a scale type</string>
    <string-array name="scale_type_arrays">
        <item>center</item>
        <item>centerCrop</item>
        <item>centerInside</item>
        <item>fitCenter</item>
        <item>fitStart</item>
        <item>fitEnd</item>
        <item>fitXY</item>
        <item>matrix</item>
    </string-array>
    <string name="wait_download">Please wait until the download process is finished.</string>
    <string name="use_cache">Use cache</string>
    <string name="shown_images">Number of shown images:</string>
    <string name="cache_explanation">Toggle the UseCache switch and all images will be reloaded with the according cache state.</string>
    <string name="refresh">Refresh</string>
    <string name="medium">Medium</string>
</resources>

