<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="tcd.training.com.trainingproject.PersistentStorage.AddNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/rg_save_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" >
            <RadioButton
                android:id="@+id/rb_shared_preference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Shared Preferences"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/rb_sqlite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="SQLite"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/rb_internal_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Internal File"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/rb_external_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="External File"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <EditText
            android:id="@+id/et_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:hint="@string/note_title"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/et_note_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:hint="@string/note_content"
            android:inputType="textMultiLine"
            android:gravity="top|left"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save_note"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/save_note"/>

</LinearLayout>
